Do closure of schema.org types